# jdb-rs

./: .gitignore  Cargo.toml
crates/jdb-test-fixtures/: Cargo.toml  build.rs
crates/jdb-test-fixtures/src/: lib.rs
crates/jdi-rs/: Cargo.toml
crates/jdi-rs/src/: connect.rs  core.rs  event.rs  lib.rs  request.rs
crates/jdi-rs/src/connect/: connectors.rs  spi.rs
crates/jdi-rs/src/connect/connectors/: attaching.rs
crates/jdi-rs/src/core/: manager.rs  mirror.rs  objects.rs  private.rs  reference_type.rs  virtual_machine.rs
crates/jdi-rs/src/core/objects/: all_classes.rs  reference_type.rs
crates/jdi-rs/src/core/virtual_machine/: attaching_vm.rs
crates/jdi-rs/tests/: connect.rs  query_classes.rs
crates/jdwp-client/: Cargo.toml
crates/jdwp-client-tests/: Cargo.toml
crates/jdwp-client-tests/src/: lib.rs
crates/jdwp-client-tests/testFixtures/: BusyBeaver.java
crates/jdwp-client-tests/tests/: connect.rs  query_vm.rs
crates/jdwp-client/src/: client.rs  codec.rs  commands.rs  connect.rs  events.rs  id_sizes.rs  lib.rs  packet.rs  raw.rs
crates/jdwp-client/src/events/: event.rs  event_handler.rs
crates/jdwp-client/src/raw/: codec.rs  packet.rs
crates/jdwp-types/: Cargo.toml
crates/jdwp-types/src/: constants.rs  ids.rs  lib.rs  macros.rs
