[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
authors = ["Joshua Radin <joshradin@github.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.80.0"
version = "0.0.0"
repository = "https://github.com/joshradin/jdwp-rs"
categories = [
    "java",
    "debugging"
]

[workspace.dependencies]
thiserror = "1.0.63"
bitfield = "0.17.0"
bytes = "1.7.2"
futures-core = "0.3.30"
futures-sink = "0.3.30"
futures-util = "0.3.30"
paste = "1.0.15"
pin-project = "1.1.5"
regex = "1.10.6"
test-log = "0.2.16"
tokio = "1.40.0"
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
tracing = "0.1.40"
