[package]
name = "jdwp-client-tests"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
jdwp-client = { version = "0.0.0", path = "../jdwp-client"}
tokio = { workspace = true, features = ["rt", "io-util", "net", "process"] }
tokio-util = { workspace = true, features = ["io"] }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }
test-log = { workspace = true, features = ["trace"] }
