[package]
name = "jdwp-client-tests"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true
categories.workspace = true
publish = false

[dev-dependencies]
jdwp-client = { path = "../jdwp-client" }
jdb-test-fixtures = { path = "../jdb-test-fixtures" }
tokio = { workspace = true, features = ["full", "tracing"] }
test-log = { workspace = true, features = ["trace"] }
tracing = { workspace = true }