[package]
name = "jdwp-client"
description = "Provides a basic implementation over a jdwp client"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
bitfield = "0.17.0"
futures-core = "0.3.30"
futures-sink = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
jdwp-types = { version = "0.0.0", path = "../jdwp-types" }
pin-project = "1.1.5"
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["io", "net", "codec"] }
tracing = "0.1.40"
thiserror = "1.0.64"
bytes = "1.7.2"

[dependencies.tokio]
version = "1.40.0"
features = ["io-util", "net", "rt", "sync"]

[dev-dependencies.tokio]
version = "1.40.0"
features = ["io-util", "net", "rt", "sync", "test-util", "macros"]
