[package]
name = "jdwp-client"
description = "Provides a basic implementation over a jdwp client"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
bitfield = { workspace = true }
futures = { workspace = true }
jdwp-types = { version = "0.0.0", path = "../jdwp-types" }
pin-project = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["io", "net", "codec"] }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
paste = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "rt", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "net", "rt", "sync", "test-util", "macros"] }
