[package]
name = "jdwp-types"
description = "Provides all the JDWP types as defined by the jdwp-spec"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true
categories.workspace = true


[dependencies]
thiserror = { workspace = true }
bitfield = { workspace = true }
